# server-client

./: CMakeLists.txt  CMakeLists.txt.user.bb20aec  README.md  main.cpp
include/: MyClient.h  MyRunnable.h  MyServer.h  myThread.h
src/: MyClient.cpp  MyRunnable.cpp  MyServer.cpp  myThread.cpp
